math-core/src/snapshots/math_core__tests__tag_with_zero.snap
---
source: math-core/src/lib.rs
expression: "\\begin{align} x \\tag{0} \\\\ y \\end{align}"
---
Position: 20
ExpectedNumber(
    "0",
)
