math-core/src/snapshots/math_core__tests__text.snap
---
source: math-core/src/lib.rs
expression: "\\text{hi}xx"
---
<math>
    <mtext>hi</mtext>
    <mi>x</mi>
    <mi>x</mi>
</math>
