math-core/src/snapshots/math_core__tests__text_diacritics.snap
---
source: math-core/src/lib.rs
expression: "\\text{\\'{a} \\~{a} \\.{a} \\H{a} \\`{a} \\={a} \\\"{a} \\v{a} \\^{a} \\u{a} \\r{a} \\c{c}}"
---
<math>
    <mtext>á ã ȧ a̋ à a̅ ä ǎ â ă å ç</mtext>
</math>
