math-core/src/snapshots/math_core__tests__text_multi_space.snap
---
source: math-core/src/lib.rs
expression: "\\text{x   y}"
---
<math>
    <mtext>x y</mtext>
</math>
