math-core/src/snapshots/math_core__tests__text_nested.snap
---
source: math-core/src/lib.rs
expression: "\\text{ \\text{a}}"
---
<math>
    <mtext> a</mtext>
</math>
