math-core/src/snapshots/math_core__tests__text_no_braces_more_space.snap
---
source: math-core/src/lib.rs
expression: "\\text    xx"
---
<math>
    <mtext>x</mtext>
    <mi>x</mi>
</math>
