math-core/src/snapshots/math_core__tests__text_no_braces_space_after.snap
---
source: math-core/src/lib.rs
expression: "\\text x y"
---
<math>
    <mtext>x</mtext>
    <mi>y</mi>
</math>
