math-core/src/snapshots/math_core__tests__text_rq.snap
---
source: math-core/src/lib.rs
expression: "\\text{\\rq}"
---
<math>
    <mtext>’</mtext>
</math>
