math-core/src/snapshots/math_core__tests__text_spaces.snap
---
source: math-core/src/lib.rs
expression: "\\text{x\\;x\\:x\\,x\\>x\\ x}"
---
<math>
    <mtext>x x x x x x</mtext>
</math>
