math-core/src/snapshots/math_core__tests__text_then_space.snap
---
source: math-core/src/lib.rs
expression: "\\text{x}~y"
---
<math>
    <mtext>x</mtext>
    <mtext> </mtext>
    <mi>y</mi>
</math>
