math-core/src/snapshots/math_core__tests__text_transform_sup.snap
---
source: math-core/src/lib.rs
expression: "\\mathbb{N} \\cup \\mathbb{N}^+"
---
<math>
    <mi>ℕ</mi>
    <mo>∪</mo>
    <msup>
        <mi>ℕ</mi>
        <mo lspace="0" rspace="0">+</mo>
    </msup>
</math>
