math-core/src/snapshots/math_core__tests__text_transforms.snap
---
source: math-core/src/lib.rs
expression: "{fi}\\ \\mathit{fi}\\ \\mathrm{fi}\\ \\texttt{fi}"
---
<math>
    <mrow>
        <mi>f</mi>
        <mi>i</mi>
    </mrow>
    <mtext> </mtext>
    <mi>𝑓𝑖</mi>
    <mtext> </mtext>
    <mi>fi</mi>
    <mtext> </mtext>
    <mtext>𝚏𝚒</mtext>
</math>
